2022-08-18

	* version 3.8.0beta1

2022-08-18

	* README
	  README.ja
	  INSTALL
	  INSTALL.ja: updated.
	* LICENSE: updated copyright year.

2022-08-18

	* Makefile.am: also make tar.xz package by make release.

2022-08-09

	* configure.ac
	  src/Makefile.am: only syl-auth-helper should link libcurl.

2022-08-09

	* src/setup.c: added MS365 account setup and OAuth2 support for Gmail.

2022-07-08

	* libsylph/oauth2.c: oauth2_get_token(): remove trailing CR.

2022-07-08

	* src/syl-auth-helper.c: generate random state string and validate.

2022-07-07

	* oauth2-sample.ini
	  src/syl-auth-helper.c: added wildcard support for oauth2.ini.

2022-07-07

	* libsylph/imap.c
	  src/inc.c
	  src/send_message.c: don't ask password if OAuth2 is explicitly
	  specified.

2022-07-05

	* src/Makefile.am
	  libsylph/imap.[ch]
	  libsylph/libsylph-0.def
	  libsylph/oauth2.[ch]
	  libsylph/pop.[ch]
	  libsylph/prefs_account.[ch]
	  libsylph/smtp.[ch]
	  src/Makefile.am
	  src/prefs_account_dialog.c
	  src/send_message.c
	  src/syl-auth-helper.c
	  oauth2.ini.sample: added OAuth2 authentication mechanism.
	  Currently tested with Gmail/MS365: POP3/IMAP4/SMTP.
	  This feature depends on libcurl.

2020-05-29

	* libsylph/defs.h: modified URLs (http -> https).

2020-05-28

	* src/update_check.c: win32: fixed execution of update-manager.exe
	  by using ShellExecute() API instead of _spawn() to invoke UAC
	  elevation properly.
	  Directly open download URL with browser if the above failed.

2018-01-30

	* version 3.7.0

2018-01-16

	* version 3.7.0beta1

2018-01-16

	* src/about.c: updated copyright year.

2018-01-16

	* libsylph/folder.c 
	  src/gtkutils.c
	  src/import.c: fixed typos (thanks to Kentaro Hayashi) (#278).

2018-01-12

	* src/summaryview.c: summary_mark_displayed_read(): reset current
	  selection list when sorted by unread (fixes #286).

2017-12-14

	* src/exportcsv.c: exp_csv_file_move(): display error message if
	  file open failed.

2017-12-12
