@@ -1,6 +1,10 @@
-2022-08-18
+2022-08-22
 
 	* version 3.8.0beta1
+
+2022-08-22
+
+	* src/syl-auth-helper.c: add timeout to accept redirect.
 
 2022-08-18
 
